# goit-ds-hw-03

./: authors.json  main.py  mainscrapping.py  mongoclient.py  pyproject.toml
