[project]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = [
    {name = "ket-hub",email = "ironket@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "pymongo (>=4.16.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
